--- a/src/main/resources/static/e_commerce/pages/css/welcome.css
+++ b/src/main/resources/static/e_commerce/pages/css/welcome.css
@@ -16,6 +16,7 @@
     --dark: #342E37;
     --red: #DB504A;
     --white: #FFFFFF;
+    --black: #000000;
 }
 
 body {
@@ -29,7 +30,7 @@ body {
     text-align: center;
 }
 .medi {
-    color: black;
+    color: var(--black);
 }
 
 .store {
