feat: add medicine update

--- a/src/main/resources/static/admin/css/css/index.css
+++ b/src/main/resources/static/admin/css/css/index.css
@@ -740,3 +740,11 @@ button:hover,
         min-width: 420px;
     }
 }
+
+.header-right-part {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    gap: 20px;
+    margin-left: auto;
+}
