--- a/src/main/resources/static/admin/css/css/order.css
+++ b/src/main/resources/static/admin/css/css/order.css
@@ -1175,3 +1175,11 @@ body.dark .notification-toast {
         page-break-inside: avoid;
     }
 }
+
+.header-right-part {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    gap: 20px;
+    margin-left: auto;
+}
